# JUDGE_ATLASX-main

./: .env.example  .gitignore  .releaseignore  BUILD_30_REMEDIATION_REPORT.md  BUILD_OPTIMIZATION_COMPLETE.md  BUILD_OPTIMIZATION_GUIDE.md  BUILD_OPTIMIZATION_PLAN.md  CRITICAL_ISSUES_AND_ACTIONS.md  CURRENT_PROOF.md  CURRENT_STATUS.md  Dockerfile.proof  FEATURE_MATRIX.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_RELEASE_HANDOFF.md  INDEX.md  LIVE_MAP_STATUS.md  Makefile  PRODUCTION_READINESS_STATUS.md  PROOF_STATUS.md  README.md  RELEASE_BLOCKERS.md  REMEDIATION_COMPLETE.txt  REPAIR_PATCH_SUMMARY.md  REPAIR_STATUS.md  REPO_REALITY.md  STATUS.md  STUBS_AND_PLACEHOLDERS.md  THE-JUDGE.sln  UPLOAD_INSTRUCTIONS.md  UPLOAD_THIS.md  azure.yaml  docker-compose.yml  noxfile.py  run_environment_checks.sh  test_optimizations.sh
backend/: .dockerignore  .env.example  Dockerfile.backend  __init__.py  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20250427_1720_initial_schema.py  20260428_0001_add_incident_link_tables.py  20260428_0002_add_boundaries_table.py  20260428_0003_add_ai_correctness_tables.py  20260428_0004_add_courtlistener_bulk_run.py  20260428_0005_add_provenance_person_id_aggregate.py  20260429_0006_add_postgis_geometry.py  20260430_0007_add_source_snapshots.py  20260430_0008_add_source_registry.py  20260430_0009_add_source_snapshot_fk.py  20260501_0001_add_relationship_evidence_table.py  20260501_0002_add_canonical_entities.py  20260501_0003_add_source_registry_ops.py  20260501_0004_add_graph_layer.py  20260501_0005_add_crime_incident_timeline.py  20260501_0006_add_ingestion_run_linkage.py  20260501_0007_add_source_tier.py  20260501_0008_add_relationship_evidence_unique_constraint.py  20260501_0009_add_entity_graph_edge_unique_constraint.py  20260502_0002_add_audit_actor_fields.py  (+55 more)
backend/app/: main.py
backend/docs/: AUTH_ROADMAP.md  DEPLOYMENT_SECURITY.md
backend/scripts/: check_api_contracts.py  check_no_direct_ingestion_network_clients.py  check_npm_audit_triage.py  check_repo_boundaries.py  export_openapi.py  proof_backend_import.py  proof_ingest_review_map.py  run_full_proof.sh  seed_proof_db.py
backend/tests/: test_geo_legal_event_schema.py  test_legal_correlation_engine.py  test_task_registry.py  test_workflow_registry.py
backend/tools/: __init__.py  check_migrations.py  repair_lifecycle_state.py  validate_sources.py  verify_audit_chain.py  verify_evidence_store.py
(+1244 files in other folders)
