[project]
name = "judgetracker-atlas-backend"
version = "0.1.0"
description = "Runnable prototype backend for JudgeTracker Atlas"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "lxml>=5.0.0",
  "cssselect>=1.2.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.9",
  "geoalchemy2>=0.16.0",
  "slowapi>=0.1.9",
  "redis>=5.0.0",
  "crawlee>=1.6.0",
  "apscheduler>=3.10.0",
  "pypdf>=4.0.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5",
  "pyyaml>=6.0",
  "beautifulsoup4>=4.12.0",
  "email-validator>=2.2.0",
  "html2text>=2024.2.26",
  "click>=8.1.7",
]

[project.scripts]
judgectl = "app.cli.main:main"

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.14.0",
  "coverage[toml]>=7.5.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.14.0",
  "coverage[toml]>=7.5.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "nox>=2024.3.2",
]
embeddings = ["openai>=1.0", "tiktoken>=0.7", "sentence-transformers>=2.7.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
filterwarnings = [
  "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
  "ignore:Please use `import python_multipart` instead.:PendingDeprecationWarning",
]
markers = [
  "unit: fast isolated unit tests",
  "integration: cross-component integration tests",
  "contract: API and contract conformance tests",
  "db: database and migration related tests",
  "auth: authentication and RBAC tests",
  "ingestion: source ingestion and parsing tests",
  "source_registry: source registry policy and consistency tests",
  "evidence: evidence snapshot and publication gate tests",
  "audit_chain: append-only audit chain integrity tests",
  "api: route and API behavior tests",
  "slow: long-running tests",
  "network_optional: tests that can use external network when enabled",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
